<resources>
    <string name="app_name">SingleMind</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="incorrect">Incorrect username or password.</string>
    <string name="forgot">Forgot password</string>
    <string name="signup">Sign up</string>
    <string name="password_validate">Repeat password</string>
    <string name="email">Email</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone">Phone number</string>
    <string name="birthdate">Birthdate (optional)</string>
    <string name="create">Create new user</string>
    <string name="error_required_fields">Error: must fill all fields.</string>
    <string name="error_duplicate_user">Error: This user already exists</string>
    <string name="user_http">https://0a0ddb84-9589-4a60-9d92-ec8f46b570b7.mock.pstmn.io/users/</string>
    <string name="event_http">https://0a0ddb84-9589-4a60-9d92-ec8f46b570b7.mock.pstmn.io/events/</string>
    <string name="event_user_http">https://0a0ddb84-9589-4a60-9d92-ec8f46b570b7.mock.pstmn.io/events/user/</string>
</resources>
